added test class